--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/three": "^0.176.0",
+    "@typescript-eslint/parser": "^8.31.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.2.8"
+    "tw-animate-css": "^1.2.8",
+    "typescript": "^5.8.3"
   }
 }
