--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-slot": "^1.2.0",
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@tabler/icons-react": "^3.31.0",
@@ -17,6 +19,7 @@
     "@tsparticles/slim": "^3.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^12.9.2",
     "html2canvas-pro": "^1.5.8",
     "jspdf": "^3.0.1",
@@ -28,7 +31,9 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
     "three": "^0.176.0",
-    "three-globe": "^2.42.4"
+    "three-globe": "^2.42.4",
+    "toast": "^0.5.4",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
