--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "lucide-react": "^0.503.0",
     "motion": "^12.9.2",
     "next": "15.3.1",
+    "pdf-lib": "^1.17.1",
     "pdfyn": "file:",
     "prisma": "^6.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "tailwind-merge": "^3.2.0",
     "three": "^0.176.0",
     "three-globe": "^2.42.4",
